failure_log_v3_utf8.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
./gradlew : C:\Users\Laptop\
AndroidStudioProjects\MySoft
POS\app\src\main\java\com\ex
ample\mysoftpos\PurchaseCard
Activity.java:370: error: 
method buildReversalAdvice 
in class IsoRequestBuilder 
cannot be applied to given 
types;
At line:1 char:1
+ ./gradlew assembleDebug > 
build_fail_v3.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (C:\Us  
  ers\Laptop...to given t   
 ypes;:String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
            IsoMessage rev 
= IsoRequestBuilder.buildRev
ersalAdvice(ctx, card, 
newTrace); // Corrected
                            
                  ^
  required: TransactionConte
xt,CardInputData
  found:    TransactionConte
xt,CardInputData,String
  reason: actual and formal 
argument lists differ in 
length
C:\Users\Laptop\AndroidStudi
oProjects\MySoftPOS\app\src\
main\java\com\example\mysoft
pos\testsuite\RunnerActivity
.java:262: error: cannot 
find symbol
        ivResultIcon.setImag
eResource(success ? R.drawab
le.ic_check_circle_24 : 
R.drawable.ic_warning_24); 
// Ensure icons exist
                            
                            
                            
      ^
  symbol:   variable 
ic_warning_24
  location: class drawable
Note: C:\Users\Laptop\Androi
dStudioProjects\MySoftPOS\ap
p\src\main\java\com\example\
mysoftpos\TransactionResultA
ctivity.java uses or 
overrides a deprecated API.
Note: Recompile with 
-Xlint:deprecation for 
details.
Note: C:\Users\Laptop\Androi
dStudioProjects\MySoftPOS\ap
p\src\main\java\com\example\
mysoftpos\iso8583\SmartIsoBu
ilder.java uses unchecked 
or unsafe operations.
Note: Recompile with 
-Xlint:unchecked for 
details.

2 errors
> Task :app:compileDebugJavaWithJavac FAILED


FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task ':
app:compileDebugJavaWithJava
c'.
> Compilation failed; see 
the compiler output below.
  C:\Users\Laptop\AndroidStu
dioProjects\MySoftPOS\app\sr
c\main\java\com\example\myso
ftpos\PurchaseCardActivity.j
ava:370: error: method 
buildReversalAdvice in 
class IsoRequestBuilder 
cannot be applied to given 
types;
              IsoMessage 
rev = IsoRequestBuilder.buil
dReversalAdvice(ctx, card, 
newTrace); // Corrected
[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html
                            
                    ^
    required: TransactionCon
text,CardInputData
    found:    TransactionCon
text,CardInputData,String
    reason: actual and 
formal argument lists 
differ in length
  C:\Users\Laptop\AndroidStu
dioProjects\MySoftPOS\app\sr
c\main\java\com\example\myso
ftpos\testsuite\RunnerActivi
ty.java:262: error: cannot 
find symbol
          ivResultIcon.setIm
ageResource(success ? R.draw
able.ic_check_circle_24 : 
R.drawable.ic_warning_24); 
// Ensure icons exist
                            
                            
                            
        ^
    symbol:   variable 
ic_warning_24
    location: class drawable
  Note: C:\Users\Laptop\Andr
oidStudioProjects\MySoftPOS\
app\src\main\java\com\exampl
e\mysoftpos\TransactionResul
tActivity.java uses or 
overrides a deprecated API.
  Note: Recompile with 
-Xlint:deprecation for 
details.
  Note: C:\Users\Laptop\Andr
oidStudioProjects\MySoftPOS\
app\src\main\java\com\exampl
e\mysoftpos\iso8583\SmartIso
Builder.java uses unchecked 
or unsafe operations.
  Note: Recompile with 
-Xlint:unchecked for 
details.
  2 errors

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to get 
full insights.

BUILD FAILED in 3s
19 actionable tasks: 1 executed, 18 up-to-date
